--- a/style.css
+++ b/style.css
@@ -18,6 +18,26 @@ h1{
 .img1{
     padding: 10px 20px 0px 0px ;
 }
+button{
+    margin-left: 30%;
+    margin-top: 30px;
+    border: 5px solid rgb(94, 91, 91);
+    width: 15%;
+    height: 5%;
+    border-radius: 20px;
+    color: white;
+    font-size: 1.5rem;
+    font-weight: bolder;
+    background-color: #000000;
+  }
+  .pressed {
+    box-shadow: 0 0 20px rgba(255, 255, 255, 1);
+    transition: box-shadow 0.1s ease-in-out;
+  }
+  button:hover{
+    background-color: rgb(94, 91, 91);
+    cursor: pointer;
+}
 
 p{
     
